--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
                 <br>
                 <h3>Enter a Pokemon or ID</h3>
                 <br></br>
-                <div>
-                    <h4>Try These: Ditto ,Pikachu ,1 , 123</h4>
-                </div>
-                <input type="text" id="inputPokemon">
+
+                <input type="text" id="inputPokemon" placeholder="EX:Pikachu,Ditto">
                 
                 <input type="submit" id="pokemon">
                 <br><br>
@@ -36,4 +34,8 @@
         
         <script type="text/javascript" src = "js/script.js"></script>
     </body>
+    <footer>
+        <hr class="style-three">
+        &copy;Michael Lee 2019<br />
+    </footer>
 </html>
